# Loom_story_teller

./: .dockerignore  .gitignore  AGENTS.md  DOCS.md  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.cursor/rules/: loom-stack.mdc
.github/workflows/: release-tauri.yml
docs/screenshots/: README.md
scripts/: generate_data.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  sources.rs  stream.rs
src/app/: layout.tsx  page.tsx
src/components/: ChartCard.tsx  ChartView.tsx  DetailPanel.tsx  ErrorBoundary.tsx  ExplorerView.tsx  HydrateStore.tsx  Onboarding.tsx  PreviewFooter.tsx  PromptDialog.tsx  QueryView.tsx  Sidebar.tsx  Skeleton.tsx  ThemeApplicator.tsx  Toast.tsx  TopBar.tsx
src/lib/: captureStoryPreviews.ts  chartPalettes.ts  chartSupport.ts  chartTooltip.ts  csvExport.ts  dashboardMicrosite.ts  dateFormat.ts  format.ts  mock-data.ts  ollama.ts  persist.ts  queryValidate.ts  recommendations.ts  smartAnalytics.ts  store.ts  tauri.ts  vega.ts  webgpu.ts
src/lib/__tests__/: format.test.ts  recommendations.test.ts  smartAnalytics.test.ts  store.test.ts
src/shaders/: scatter.wgsl
src/styles/: globals.css
