[package]
name = "loom"
version = "0.1.0"
description = "Loom — Local-first data storytelling for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "loom_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
opener = "0.7"
serde_json = "1"
duckdb = { version = "1.2", features = ["bundled"] }
arrow = { version = "53", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
